@@ -5,18 +5,13 @@ import com.tecnocampus.LS2.protube_back.adapter.out.persistence.mapper.CategoryM
 import com.tecnocampus.LS2.protube_back.adapter.out.persistence.mapper.TagMapper;
 import com.tecnocampus.LS2.protube_back.adapter.out.persistence.mapper.VideoMapper;
 import com.tecnocampus.LS2.protube_back.adapter.out.persistence.repository.VideoRepository;
-import com.tecnocampus.LS2.protube_back.domain.model.Category;
-import com.tecnocampus.LS2.protube_back.domain.model.Tag;
-import com.tecnocampus.LS2.protube_back.domain.model.Video;
+import com.tecnocampus.LS2.protube_back.domain.model.*;
 import com.tecnocampus.LS2.protube_back.port.out.GetVideoPort;
 import com.tecnocampus.LS2.protube_back.port.out.StoreVideoPort;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Component
@@ -27,12 +22,13 @@ public class VideoPersistenceAdapter implements GetVideoPort, StoreVideoPort {
     private final VideoMapper videoMapper;
     private final TagMapper tagMapper;
     private final CategoryMapper categoryMapper;
+    private final CommentPersistenceAdapter commentPersistenceAdapter;
 
     @Override
     public List<Video> getAllVideos() {
         return videoRepository.findAll().stream()
                 .map(videoMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -49,19 +45,15 @@ public class VideoPersistenceAdapter implements GetVideoPort, StoreVideoPort {
 
     @Override
     public Video storeAndGetVideo(Video video, Set<Tag> tags, Set<Category> categories) {
-        Optional<UserJpaEntity> userJpaEntity = userPersistenceAdapter.findByUsername(video.getUsername());
+        UserJpaEntity userJpaEntity = userPersistenceAdapter.findByUsername(video.getUsername());
         Set<TagJpaEntity> tagsJpa = tags.stream().map(tagMapper::toJpaEntity).collect(Collectors.toSet());
         Set<CategoryJpaEntity> categoriesJpa = categories.stream().map(categoryMapper::toJpaEntity).collect(Collectors.toSet());
 
         // We assume that the video doesn't exist and the user exists, as it's checked in the service
-        if (userJpaEntity.isPresent()) {
-            VideoJpaEntity videoJpaEntity = videoMapper.toJpaEntity(video, userJpaEntity.get(), tagsJpa, categoriesJpa);
-            videoRepository.save(videoJpaEntity);
+        VideoJpaEntity videoJpaEntity = videoMapper.toJpaEntity(video, userJpaEntity, tagsJpa, categoriesJpa);
+        videoRepository.save(videoJpaEntity);
 
-            return videoMapper.toDomain(videoJpaEntity);
-        }
-
-        return null; // Never reached
+        return videoMapper.toDomain(videoJpaEntity);
     }
 
     @Override
@@ -69,5 +61,44 @@ public class VideoPersistenceAdapter implements GetVideoPort, StoreVideoPort {
         if (videoRepository.findById(videoId).isEmpty()) {
             throw new NoSuchElementException("Video not found with ID: " + videoId);
         }
+    }
+
+    private PlayerPageVideo getVideoWithFields(VideoJpaEntity videoJpaEntity, Set<Field> fields) {
+        Video video = videoMapper.toDomain(videoJpaEntity);
+
+        List<Tag> tags = fields.contains(Field.TAGS) ?
+                videoJpaEntity.getTags().stream()
+                        .map(tagMapper::toDomain)
+                        .toList() :
+                List.of();
+
+        List<Category> categories = fields.contains(Field.CATEGORIES) ?
+                videoJpaEntity.getCategories().stream()
+                        .map(categoryMapper::toDomain)
+                        .toList() :
+                List.of();
+
+        List<Comment> comments = fields.contains(Field.COMMENTS) ?
+                commentPersistenceAdapter.getAllCommentsByVideo(videoJpaEntity) :
+                List.of();
+
+        return PlayerPageVideo.from(video, tags, categories, comments);
+    }
+
+    @Override
+    public PlayerPageVideo getVideoWithFieldsById(String id, Set<Field> fields) {
+        VideoJpaEntity videoJpaEntity = videoRepository.findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Video not found with ID: " + id));
+
+        return getVideoWithFields(videoJpaEntity, fields);
+
+    }
+
+    @Override
+    public List<PlayerPageVideo> getAllVideosWithFields(Set<Field> fields) {
+        return videoRepository.findAll()
+                .stream()
+                .map(video -> getVideoWithFields(video, fields))
+                .toList();
     }
 }
