@@ -1,6 +1,6 @@
 package com.tecnocampus.LS2.protube_back.domain.service;
 
-import com.tecnocampus.LS2.protube_back.domain.model.Video;
+import com.tecnocampus.LS2.protube_back.domain.model.Field;
 import com.tecnocampus.LS2.protube_back.port.in.command.GetVideoCommand;
 import com.tecnocampus.LS2.protube_back.port.in.useCase.GetAllVideosUseCase;
 import com.tecnocampus.LS2.protube_back.port.out.GetVideoPort;
@@ -8,7 +8,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Service
 @RequiredArgsConstructor
@@ -17,15 +17,14 @@ public class GetAllVideosService implements GetAllVideosUseCase {
 
     @Override
     public List<GetVideoCommand> getAllVideos() {
-        //TODO add tags, comments and categories
-        List<Video> videos = getVideoPort.getAllVideos();
+        Set<Field> fields = Set.of(Field.CATEGORIES, Field.TAGS, Field.COMMENTS);
 
-        return videos.stream()
-                .map(video -> GetVideoCommand.from(video,
-                                                   List.of(),
-                                                   List.of(),
-                                                   List.of()))
-                .collect(Collectors.toList());
-
+        return getVideoPort.getAllVideosWithFields(fields).stream()
+                .map(data ->
+                    GetVideoCommand.from(data.video(),
+                            data.categories(),
+                            data.tags(),
+                            data.comments()))
+                .toList();
     }
 }
